Configurable page title

--- a/templates/album.pug
+++ b/templates/album.pug
@@ -1,6 +1,6 @@
 html
   head
-    title imgur-proxy
+    title #{title}
     include includes/head.pug
   body
     img(src=util.proxyURL(url), alt='' class='album-img')
