--- a/templates/gallery.pug
+++ b/templates/gallery.pug
@@ -34,7 +34,7 @@ mixin commentbox(comment)
         +commentbox(reply)
 html
   head
-    title imgur-proxy
+    title #{title}
     include includes/head.pug
   body
     div(class='Gallery-Content')
