--- a/templates/bare-album.pug
+++ b/templates/bare-album.pug
@@ -1,6 +1,6 @@
 html
   head
-    title #{title}
+    title #{pageTitle}
     include includes/head.pug
   body
     img(src=util.proxyURL(url), alt='' class='album-img')
