--- a/templates/gallery.pug
+++ b/templates/gallery.pug
@@ -32,9 +32,16 @@ mixin commentbox(comment)
     div(class='GalleryComment-replies')
       each reply in comment.comments
         +commentbox(reply)
+
+mixin media(m)
+  div(class='Gallery-Content--mediaContainer')
+    div(class='Gallery-Content--media')
+      div(class='imageContainer')
+        img(src=util.proxyURL(m.url))
+
 html
   head
-    title #{title}
+    title #{pageTitle}
     include includes/head.pug
   body
     div(class='Gallery-Content')
@@ -42,24 +49,26 @@ html
         div(class='Gallery-Title')
           span #{title}
         div(class='Gallery-Byline')
-          a(class='author-link' title='View profile of '+account.username, href='/user/'+account.username)
-            span(class='UserAvatar', title=account.username, style='background-image: url("' + util.proxyURL(account.avatar_url) + '");')
+          if account_id > 0
+            a(class='author-link' title='View profile of '+account.username, href='/user/'+account.username)
+              span(class='UserAvatar', title=account.username, style='background-image: url("' + util.proxyURL(account.avatar_url) + '");')
           div(class='Info-Wrapper')
-            div(class='Info')
-              a(class='author-name' title='View profile of '+account.username, href='/user/'+account.username) #{account.username}
+            if account_id > 0
+              div(class='Info')
+                a(class='author-name' title='View profile of '+account.username, href='/user/'+account.username) #{account.username}
             div(class='Meta')
               span #{view_count} Views
               span(class='delimiter') •
               span(title=created_at) #{created_at}
       div(class='Gallery-ContentWrapper')
-        div(class='Gallery-Content--media')
-          div(class='imageContainer')
-            img(src=util.proxyURL(cover.url))
-      div(class='Gallery-Content--tags')
-        each tag in tags
-          a(class='TagPill'
-            style='background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) repeat scroll 0% 0%, rgba(0, 0, 0, 0) url("/' + tag.background_id + '_d.jpg?maxwidth=200&fidelity=grand") repeat scroll 0% 0%;'
-            href='/t/'+tag.tag) #{tag.tag}
+        each m in media
+          +media(m)
+      if tags
+        div(class='Gallery-Content--tags')
+          each tag in tags
+            a(class='TagPill'
+              style='background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) repeat scroll 0% 0%, rgba(0, 0, 0, 0) url("/' + tag.background_id + '_d.jpg?maxwidth=200&fidelity=grand") repeat scroll 0% 0%;'
+              href='/t/'+tag.tag) #{tag.tag}
     if comments != null
       div(class='CommentsList')
         div(class='CommentsList-headline')
