--- a/templates/includes/head.pug
+++ b/templates/includes/head.pug
@@ -1,2 +1,3 @@
+title= pageTitle
 link(rel="stylesheet", type="text/css", href="/css/styles.css")
 link(rel="stylesheet", type="text/css", href="/css/custom.css")
