--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -390,8 +390,66 @@ Post-item-title {
   max-height: 500px;
 }
 
+/* USER HEADER */
 
-/* TAG PAGE */
+.ProfileMeta-stats {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 8px;
+    cursor: default;
+}
+
+.ProfileCover-header {
+    height: 258px;
+    /* padding: 52px 0 0; */
+    padding: 52px 16px 0;
+    width: 100%;
+    margin: 0 auto;
+    min-width: 450px;
+    z-index: 1;
+}
+
+.ProfileMeta {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.ProfileMeta .UserAvatar {
+    position: relative;
+    height: 128px;
+    width: 128px;
+    overflow: hidden;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.UserAvatar {
+    border-radius: 50%;
+    background: grey;
+    background-image: none;
+    background-size: cover;
+}
+
+.ProfileMeta-data {
+    margin: auto 24px;
+    color: #f2f2f2;
+    overflow: hidden;
+}
+
+.ProfileMeta-user {
+    font-size: 44px;
+    font-family: Proxima Nova ExtraBold,Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.ProfileMeta-divider {
+    margin: auto 15px;
+}
+
+
+/* TAG HEADER */
 
 .Cover-item-count {
     text-transform: uppercase;
