--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -1,4 +1,5 @@
 .MoveContainer.Navbar.HomeNavbar
   .NavbarContainer-left rimgu
   .NavbarContainer-right
+    a(href='https://codeberg.org/3np/rimgu/raw/branch/master/FUNDING.yml' target='blank') [$$$]&nbsp;
     a(href='https://codeberg.org/3np/rimgu' target='blank') [src]
