--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,4 +1,4 @@
-<title>rimgu</title>
+<title>rimgo</title>
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,5 +16,4 @@
 <meta name="theme-color" content="#ffffff">
 -->
 
-<link rel="stylesheet" href="/css/styles.css"/>
-<link rel="stylesheet" href="/css/custom.css"/>
+<link rel="stylesheet" href="/static/css/base.css"/>
