--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -14,4 +14,5 @@
 <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+<link rel="stylesheet" href="/static/fonts/Material-Icons-Outlined.css" />
 <link rel="stylesheet" href="/static/css/base.css"/>
