--- a/static/css/album.css
+++ b/static/css/album.css
@@ -2,14 +2,24 @@ h1 {
   margin: 0;
 }
 
+p {
+  margin: 0.5em 0;
+}
+
 img {
   max-width: 100%;
 }
 
 .imageMeta__wrapper,
+.imageMeta__item,
 .imageMeta {
   display: flex;
   gap: 12px;
+  align-items: center;
+}
+
+.imageMeta__item {
+  gap: 4px;
 }
 
 .imageMeta__wrapper {
