--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -27,7 +27,7 @@
       <li>Images and videos (gifv, mp4)</li>
       <li>Albums</li>
       <li>Streaming</li>
-      <li>Pretty CSS styling (responsive?)</li>
+      <li>Pretty CSS styling (responsive!)</li>
       <li>Logo</li>
     </ul>
 
