--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,6 @@
 a {
-  color: #1e88e5;
+  color: #E0E0E0;
+  font-weight: 600;
   text-decoration: none;
 }
 
@@ -8,7 +9,7 @@ a > h2 {
 }
 
 body {
-  background-color: black;
+  background-color: #212121;
   color: white;
   font-size: 18px;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif; 
