Fix source code URL in the footer

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
   <!--<a href="/privacy">
     <span class="material-icons-outlined">visibility</span> Privacy
   </a>-->
-  <a href="https://codeberg.org/librarian/librarian" rel="noreferrer">
+  <a href="https://codeberg.org/video-prize-ranch/rimgo" rel="noreferrer">
     <span class="material-icons-outlined">code</span> Source Code
   </a>
 </footer>
