Gallery and video support

--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -18,7 +18,11 @@
 
     <h3>Try it!</h3>
 
-    <a href="/a/H8M4rcp">Album</a>
+    <ul>
+      <li><a href="/a/H8M4rcp">Album</a></li>
+      <li><a href="/gallery/gYiQLWy">Gallery</a></li>
+      <li><a href="/gallery/cTRwaJU">Video</a></li>
+    </ul>
 
     <h2>Features</h2>
 
