Change reply line color

--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -12,7 +12,7 @@
 
 .replies {
   margin-left: 20px;
-  border-left: 2px #d2d2d2 solid;
+  border-left: 2px #424242 solid;
   padding-left: 8px;
 }
 
