--- a/views/partials/comment.hbs
+++ b/views/partials/comment.hbs
@@ -2,7 +2,7 @@
   <div class="comment__user">
     <img src="{{this.User.Avatar}}" class="pfp" width="24" height="24" loading="lazy">
     <!--<a href="/user/{{this.User.Username}}">-->
-      <p><b>{{this.User.Username}}</b></p>
+      <p class="comment__user__username"><b>{{this.User.Username}}</b></p>
     <!--</a>-->
   </div>
   <div>
