Use album title for page title

--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>rimgo</title>
+  
   {{> partials/head }}
   
   <link rel="stylesheet" href="/static/css/frontpage.css" />
