--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>{{album.Title}} - rimgo</title>
+
   {{> partials/head }}
 
   <link rel="stylesheet" href="/static/fonts/Material-Icons-Outlined.css" />
