Fix title on date

--- a/views/partials/comment.hbs
+++ b/views/partials/comment.hbs
@@ -7,7 +7,7 @@
   </div>
   <div>
     {{{this.Comment}}}
-    <p title="{{this.Date}}">
+    <p title="{{this.CreatedAt}}">
       {{this.RelTime}}
       {{#if this.DeletedAt}}
       <span class="comment__updatedDate">(deleted {{this.DeletedAt}})</span>
