--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -69,7 +69,7 @@
     <br>
     {{/each}}
 
-    {{#equal album.Privacy "public"}}
+    {{#if comments}}
     <div>
       <hr>
       <input id="comments__expandBtn" type="checkbox">
@@ -84,7 +84,7 @@
       </div>
     </div>
     <hr>
-    {{/equal}}
+    {{/if}}
   </main>
 
   {{> partials/footer }}
